--- a/libft/Makefile
+++ b/libft/Makefile
@@ -11,7 +11,8 @@ SRCS = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c\
 	   ft_strlcat.c ft_toupper.c ft_tolower.c ft_strchr.c ft_strrchr.c ft_strncmp.c\
 	   ft_memchr.c ft_memcmp.c ft_strnstr.c ft_atoi.c ft_calloc.c ft_strdup.c\
 	   ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c\
-	   ft_striteri.c ft_putchar_fd.c  ft_putnbr_fd.c ft_putstr_fd.c ft_putendl_fd.c 
+	   ft_striteri.c ft_putchar_fd.c  ft_putnbr_fd.c ft_putstr_fd.c ft_putendl_fd.c\
+	   ft_strcat.c ft_strdcmp.c ft_tablen.c ft_tabchr.c\
 
 BONUS = ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c ft_lstdelone.c\
 		 ft_lstiter.c ft_lstlast.c ft_lstmap.c ft_lstnew.c ft_lstsize.c
